Melodie/wwwroot/css/site.css
/* ... */
input[type=range]::-moz-range-thumb {
    width: 11px;
    height: 11px;
    margin-top: -2px;
    border: none;
    border-radius: 50%;
}

/* Slider - IE 10+ */
input[type=range]::-ms-track {
    width: 130px;
    height: 7px;
    background: transparent;
    color: transparent;
    border-color: transparent;
    border-width: 6px 0;
}

input[type=range]::-ms-thumb {
    width: 11px;
    height: 11px;
    border: none;
    border-radius: 50%;
}

input[type=range]::-ms-fill-lower,
input[type=range]::-ms-fill-upper { border-radius: 10px; }

/* Global - Buttons
-------------------------------------------------- */

/** TODO: Delete one of the buttons group **/
/** Button 2 **/
.btn {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 150px;
    height: 40px;
    font-size: 0.8em;
    margin: 0;
    background: transparent;
    color: #BFC0C0;
    border: 2px solid #BFC0C0;
    text-transform: uppercase;
    text-decoration: none;
    letter-spacing: 1.5px; /* TODO: Keep? */
    transition: all 300ms;
    overflow: hidden;
    cursor: pointer;
}

.btn span {
    color: #BFC0C0;
    text-decoration: none;
    letter-spacing: 1px; /* TODO: Keep? */
    z-index: 20;
}

.btn a {
    color: inherit;
    text-decoration: inherit;
}

/** Colors **/
.btn.orange                                { color: #F98350; border-color: #F98350; }
.btn.orange span                           { color: #F98350; }
.btn.orange.slide-effect .btn-effect-box   { background: #F98350; }
.btn.orange.growing-circle .btn-effect-box { background: #F98350; }
.btn.orange.showing-icon .btn-effect-box   { background: #F98350; }

.btn.yellow                                { color: #F9AD50; border-color: #F9AD50; }
.btn.yellow span                           { color: #F9AD50; }
.btn.yellow.slide-effect .btn-effect-box   { background: #F9AD50; }
.btn.yellow.growing-circle .btn-effect-box { background: #F9AD50; }
.btn.yellow.showing-icon .btn-effect-box   { background: #F9AD50; }

/** Effect **/
/* Horizontal growing rectangle */
.btn.slide-effect { position: relative; }
.btn.slide-effect span {
    position: relative;
    transition: all 350ms ease-out;
}

.btn.slide-effect .btn-effect-box {
    position: absolute;
    bottom: 0;
    left: -200px;
    width: 100%;
    height: 100%;
    background: #BFC0C0;
    transition: all 350ms ease-out;
}

.btn.slide-effect:hover .btn-effect-box { left: 0; }

/* Background growing circle */
.btn.growing-circle { position: relative; }
.btn.growing-circle span {
    position: relative;
    transition: all 450ms ease-out;
}

.btn.growing-circle .btn-effect-box {
    position: absolute;
    top: 20px;
    left: 70px;
    width: 0;
    height: 0;
    line-height: 40px;
    background: #BFC0C0;
    border-radius: 50%;
    opacity: 0;
    transition: all 500ms ease-out;
}

.btn.growing-circle:hover .btn-effect-box {
    top: -70px;
    left: -70px;
    width: 200%;
    height: 500%;
    opacity: 1;
}

/* Showing icon */
.btn.showing-icon { position: relative; }
.btn.showing-icon span {
    position: relative;
    left: 0;
    transition: all 350ms ease-out;
}

.btn.showing-icon .btn-effect-box {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 0;
    left: -200px;
    width: 100%;
    height: 100%;
    padding: 0;
    background: #BFC0C0;
    transition: all 350ms ease-out;
}

.btn.showing-icon .btn-effect-box object,
.btn.showing-icon .btn-effect-box img {
    display: inline-block;
    width: 20px;
    height: auto;
    background: none;
    border: none;
    pointer-events: none;
}

.btn.showing-icon:hover .btn-effect-box { left: 0; }
.btn.showing-icon:hover span { left: 150px; }

/* Global - Playlists
-------------------------------------------------- */

.playlist-logo {
    position: relative;
    display: block;
    width: 100%;
    height: 0;
    margin: 0 auto;
    vertical-align: middle;
    padding-bottom: 100%;
}

.playlist-logo:after {
    content: attr(data-acronym) '';
    position: absolute;
    top: 50%;
    right: 0;
    left: 0;
    transform: translateY(-50%);
    text-align: center;
}

.playlist-title {
    display: inline-block;
    width: 100%;
    font-weight: bold;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.playlist-desc {
    display: inline-block;
    width: 100%;
    line-height: 1em;
    margin: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

/* Global - Music player
-------------------------------------------------- */   

#music-player {
    display: block;
    width: 100%;
    height: 145px;
    z-index: 500;
}

/** Waveform **/
#music-player-waveform {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    width: 100%;
    height: 64px;
    margin: 10px 0 5px 0;
}

/** Controls **/
#music-player-controls {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 10px 0;
}

#music-player-controls .section {
    width: 33%;
    height: 100%;
}

/* Buttons */
#music-player-buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    z-index: 510;
}

.music-player-btn {
    width: 30px;
    height: 30px;
    margin: 0 5px;
    border: thin transparent solid;
    border-radius: 50%;
    cursor: pointer;
    transition: all 350ms;
}

.music-player-btn object {
    width: 100%;
    pointer-events: none;
}

.music-player-btn.smaller   { width: 15px; height: 15px }
.music-player-btn.bigger    { width: 45px; height: 45px }

.music-player-btn #play-icon    { display: block; }
.music-player-btn #pause-icon   { display: none; }

/* Sliders */
#music-player-sliders {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-end;
    padding-right: 25px;
}
/* ... */

